--- a/_config.yml
+++ b/_config.yml
@@ -13,10 +13,10 @@ title                    : "Lingzhi Yu"
 title_separator          : "-"
 name                     : &name "Your Name"
 description              : &description "PhD Student in Marketing, UT Austin"   # Update this with a general description of your site, this is the default if not overridden by a page
-url                      : "https://lingzhiyumkt.github.io" # The base hostname & protocol for your site e.g. "https://[your GitHub username].github.io",
+url                      : "https://lingzhi-yu.github.io" # The base hostname & protocol for your site e.g. "https://[your GitHub username].github.io",
                                                            # or if you already have some other page hosted on Github then use "https://[your GitHub username].github.io/[Your Repo Name]"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "lingzhiyumkt/lingzhiyumkt.github.io"
+repository               : "https://lingzhi-yu.github.io"
 
 # Site Author - The following control what appear as part of the author content on the side bar.
 #               If a field is blank the icon and link will not appear, otherwise it will be shown.
