--- a/_config.yml
+++ b/_config.yml
@@ -9,10 +9,10 @@
 # Basic Site Settings
 locale                   : "en-US"
 site_theme               : "default" # Currently available options are "default", "air"
-title                    : "Lingzhi Yu"
-title_separator          : "-"
+#title                    : "Lingzhi Yu"
+# title_separator          : "-"
 name                     : &name "Your Name"
-description              : &description "PhD Student in Marketing, UT Austin"   # Update this with a general description of your site, this is the default if not overridden by a page
+description              : &description "LingHi Yu Web"   # Update this with a general description of your site, this is the default if not overridden by a page
 url                      : "https://lingzhi-yu.github.io" # The base hostname & protocol for your site e.g. "https://[your GitHub username].github.io",
                                                            # or if you already have some other page hosted on Github then use "https://[your GitHub username].github.io/[Your Repo Name]"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
@@ -23,8 +23,8 @@ repository               : "https://lingzhi-yu.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "profile.png"
-  name             : "Your Sidebar Name"
+  avatar           : "Lingzhiyu_1.jpg"
+  name             : "Lingzhi Yu"
   pronouns         : # example: "she/her"  
   bio              : "PhD Student in Marketing at McCombs School of Business, UT Austin"
   location         : "Austin, TX"
