--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -11,11 +11,14 @@ main:
   - title: "Home"
     url: /
     
+  - title: "Research"
+    url: /research/
+    
   # - title: "Publications"
   #  url: /publications/
 
-  - title: "Research"
-    url: /talks/    
+  # - title: "talks"
+    # url: /talks/    
 
   - title: "Teaching"
     url: /teaching/    
