--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ custom_css: "/assets/css/custom.css"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "Lingzhiyu_1.jpg"
+  avatar           : "Lingzhi-Yu-MKT-scaled.jpg"
   name             : "Lingzhi Yu"
   pronouns         : # example: "she/her"  
   bio              : "PhD Student in Marketing at McCombs School of Business, UT Austin"
