--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ author:
   avatar           : "Lingzhi-Yu-MKT-scaled.jpg"
   name             : "Lingzhi Yu"
   pronouns         : # example: "she/her"  
-  bio              : "PhD Student in Marketing at McCombs School of Business, UT Austin"
+  # bio              : "PhD Student in Marketing at McCombs School of Business, UT Austin"
   location         : "Austin, TX"
   # employer         : "McCombs School of Business"
   uri              : # URL
