--- a/_config.yml
+++ b/_config.yml
@@ -30,6 +30,7 @@ author:
   name             : "Lingzhi Yu"
   pronouns         : # example: "she/her"  
   # bio              : "PhD Student in Marketing at McCombs School of Business, UT Austin"
+  bio              : "  "
   location         : "Austin, TX"
   # employer         : "McCombs School of Business"
   uri              : # URL
